# legal-ai-adoption-dashboard

./: AGENTS.md  CASE_STUDY.md  Makefile  PRIVACY.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  what-this-proves.md
.github/workflows/: ci.yml
app/: layout.tsx  page.tsx
app/accounts/[id]/: page.tsx
app/blockers/: page.tsx
app/feedback/: page.tsx
components/: Card.tsx  ExportButton.tsx  HealthBadge.tsx  NavLinks.tsx  PageHeader.tsx  SeverityTag.tsx  TrendBar.tsx
data/: README.md  accounts.json  benchmarks.json  blockers.json  feedback.json  health-config.json  workflows.json
docs/: API.md  FEATURES.md  customer-workflow.md  product-feedback-notes.md  reviewer-guide.md
examples/: prioritized-backlog.json  prioritized-backlog.md  sample-output.md  synthetic-input.json
lib/: actions.test.ts  actions.ts  aggregate.ts  command-center.test.ts  command-center.ts  data.test.ts  data.ts  health.test.ts  health.ts  portfolio.test.ts  portfolio.ts  schema.ts
product-feedback-loop/: Makefile  README.md  pyproject.toml
product-feedback-loop/.github/workflows/: ci.yml
product-feedback-loop/data/: interviews.json
product-feedback-loop/examples/: product-memo.md
product-feedback-loop/src/feedback_loop/: __init__.py  cli.py  scoring.py
product-feedback-loop/templates/: changelog-note.md
product-feedback-loop/tests/: test_scoring.py
