[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feedback-loop"
version = "0.1.0"
description = "Turn customer interviews into a prioritised, traceable product backlog and a 'what we heard, what we changed' memo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
feedback-loop = "feedback_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
